--- a/demo-store.html
+++ b/demo-store.html
@@ -158,7 +158,7 @@
         </section>
 
         <!-- Brand Stores Section -->
-        <section class="brand-stores-section">
+        <!-- <section class="brand-stores-section">
             <h2 class="section-title">Brand Stores</h2>
 
             <div class="brand-stores-grid">
@@ -199,7 +199,7 @@
                     <img src="https://ext.same-assets.com/793653753/2878263316.svg" alt="GlamAR Brand">
                 </a>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
